overlap design resolved

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -14,7 +14,7 @@
    width: 100%;
    display: flex;
    justify-content: space-between;
-   margin-top: 25px;
+   margin-top: 225px;
    padding: 30px;
  }
  #contact{
